--- a/style.css
+++ b/style.css
@@ -45,3 +45,36 @@ body {
 .rotate-45 {
   transform: rotate(90deg);
 }
+/* Button Styles */
+.btn--2 {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+.btn--2::after {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  line-height: 50px;
+  background: linear-gradient(90deg, #8fd9cb 0%, #ffa280 100%);
+  content: "Click!";
+  font-size: 16px;
+  font-weight: 700;
+  color: #494336;
+  text-transform: uppercase;
+  transition: top 0.3s;
+}
+/* On hover */
+.btn--2:hover {
+  background-color: #d7d9dd; /* Change button background */
+}
+.btn--2:hover::after {
+  top: 0;
+  background: linear-gradient(90deg, #8fd9cb 0%, #ffa280 100%);
+}
+.btn--2:hover > .btn__text {
+  top: -100%;
+  transition: top 0.3s;
+}
